# uhura-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/uhura-cli/: Cargo.toml
crates/uhura-cli/src/: cli.rs  commands.rs  main.rs  serve.rs
crates/uhura-codec/: Cargo.toml
crates/uhura-codec/src/: lib.rs  parse.rs  render.rs
crates/uhura-core/: Cargo.toml
crates/uhura-core/src/: config.rs  envelope.rs  error.rs  lib.rs  rpc.rs
crates/uhura-engine/: Cargo.toml
crates/uhura-engine/src/: consumer.rs  lib.rs  wal.rs
crates/uhura-pg/: Cargo.toml
crates/uhura-pg/sql/: cdc.sql  schema.sql
crates/uhura-pg/src/: conn.rs  inbox.rs  lib.rs  outbox.rs  schema.rs  stats.rs  wal.rs
crates/uhura-pg/tests/: cdc_trigger.rs  outbox_roundtrip.rs
crates/uhura-transport/: Cargo.toml
crates/uhura-transport/src/: lib.rs  rabbitmq.rs
crates/uhura-transport/tests/: topology_publish.rs
