[package]
name = "uhura-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uhura-core.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
tracing.workspace = true
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
