[package]
name = "uhura-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uhura-core.workspace = true
uhura-transport.workspace = true
uhura-pg.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
