[package]
name = "uhura-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uhura-core.workspace = true
uhura-transport.workspace = true
uhura-pg.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
lapin.workspace = true
futures-util.workspace = true
serde_json.workspace = true
