[package]
name = "uhura-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Testes que sobem RabbitMQ real via testcontainers.
integration = []

[dependencies]
uhura-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
lapin.workspace = true
serde_json.workspace = true
futures-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
testcontainers-modules = { version = "0.13", features = ["rabbitmq"] }
